# oop-labs

./: .gitignore
lab1/: .clangd  CMakeLists.txt
lab1/res/: main.tex
lab1/src/: action1.cpp  action1.h  action1_diag1.cpp  action1_diag1.h  action1_diag2.cpp  action1_diag2.h  action2.cpp  action2.h  main.cpp
lab2/: CMakeLists.txt
lab2/res/: main.tex
lab2/src/: canvas.cpp  canvas.h  editor.cpp  editor.h  main.cpp  shape.cpp  shape.h
template/: .latexmkrc  template.tex
